--- a/heroku/langpacks/de.yml
+++ b/heroku/langpacks/de.yml
@@ -190,7 +190,9 @@ heroku_web:
 heroku_backup:
   period: "⌚️ <b>Die Unit «ALPHA»</b> erstellt regelmäßig Backups. Diese Einstellungen können später geändert werden.\n\nBitte wählen Sie die Backup-Häufigkeit\n\n<b>🚫 Es ist daher nicht möglich, Module, die mit dem Befehl .lm aus Dateien heruntergeladen wurden, wiederherzustellen! Seien Sie vorsichtig und führen Sie vor der Wiederherstellung .backupmods aus.</b>"
   saved: "✅ Die Periodizität ist gespeichert! Sie kann mit <code>{prefix}set_backup_period</code> geändert werden."
+  saved_bot: "✅ Die Periodizität ist gespeichert! Sie kann mit {prefix}set_backup_period geändert werden."
   never: "✅ Ich werde keine automatischen Backups durchführen. Kann mit <code>{prefix}set_backup_period</code> abgebrochen werden."
+  never_bot: "✅ Ich werde keine automatischen Backups durchführen. Kann mit {prefix}set_backup_period abgebrochen werden."
   invalid_args: "🚫 <b>Bitte geben Sie die korrekte Häufigkeit in Stunden an oder 0 zum Deaktivieren</b>"
   backup_caption: '<emoji document_id=5469718869536940860>👆</emoji> <b>Dies ist Ihr Datenbank-Backup. Geben Sie es nicht an Dritte weiter, es enthält persönliche Informationen. Falls Sie es wiederherstellen müssen, verwenden Sie</b> <pre><code class="language-heroku">{prefix}restoredb</code></pre> <b>als Antwort auf diese Datei</b>.'
   backupall_info: '<emoji document_id=5469718869536940860>👆</emoji> <b>Dies ist Ihre Sicherungskopie der Datenbank und Module. Geben Sie sie nicht weiter, da sie persönliche Informationen enthält. Falls Sie sie wiederherstellen müssen, verwenden Sie</b> <pre><code class="language-heroku">{prefix}restoreall</code></pre> <b>als Antwort auf diese Datei.</b>'
@@ -324,6 +326,9 @@ inline_stuff:
   bot_username_occupied: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Dieser Bot-Benutzername ist bereits vergeben</b>"
   bot_updated: "<emoji document_id=6318792204118656433>🎉</emoji> <b>Einstellungen gespeichert. Um sie anzuwenden, starte den Userbot neu</b>"
   this_is_heroku: "🪐 <b>Hallo! Das ist Heroku — ein leistungsstarker modularer Telegram-Userbot. Du kannst ihn auf deinem Account installieren!</b>\n\n<b>🌍 <a href=\"https://github.com/coddrago/Heroku\">GitHub</a></b>\n<b>👥 <a href=\"https://t.me/heroku_talks\">Support-Chat</a></b>"
+  profile_cmd: "ℹ️ Grundlegende Userbot-Informationen\n\n<blockquote>• Präfix: {prefix}\n• RAM-Auslastung: {ram_usage} MB\n• CPU-Auslastung: {cpu_usage} %\n• Hosting: {host}</blockquote>"
+  restart: "🔄 Dein Heroku wird neu gestartet..."
+  prefix_reset: "🔀 Präfix zurückgesetzt!"
   _cmd_doc_ch_heroku_bot: "<Benutzername> - Ändert den Benutzernamen des Inline-Bots"
 
 test:
@@ -332,7 +337,7 @@ test:
   configping: "Ihr benutzerdefinierter Text. Platzhalter können verwendet werden: {ping} - Ihr Ping, {uptime} - Ihre Uptime, {ping_hint} - Hinweis. Sie können den Platzhaltername {hostname} verwenden, wenn Sie den Hostname Ihres Servers benötigen"
   hint: "Geben Sie einen Hinweis an"
   ping_emoji: "Emoji, das bei einer leichten Ping-Erhöhung angezeigt wird."
-  banner_url: "Bild für Ihren Ping, zum Beispiel: https://imgur.com/a/dsh7Fvb.png"
+  banner_url: "Bild für Ihren Ping, zum Beispiel: https://raw.githubusercontent.com/coddrago/assets/refs/heads/main/heroku/ping_cmd.png"
   logs_caption: "<emoji document_id=5350594756126721186>🪐</emoji> <b>Heroku-Logs des Levels</b> <code>{}</code>\n\n<emoji document_id=5228879218363872764>⚪️</emoji> <b>Version: {}.{}.{}</b>{}"
   debugging_enabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Der Entwicklermodus wurde für das Modul</b> <code>{0}</code> <b>aktiviert</b>\n<i>Gehe zum Ordner `debug_modules`, ändere die Datei `{0}.py` und beobachte die Änderungen in Echtzeit</i>"
   debugging_disabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Der Entwicklermodus wurde deaktiviert</b>"
@@ -479,7 +484,7 @@ loader:
   unloaded: "{} <b>Modul {} wurde entladen.</b>"
   not_unloaded: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Modul wurde nicht entladen.</b>"
   requirements_failed: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Fehler bei der Installation der Abhängigkeiten</b>"
-  requirements_failed_termux: "<emoji document_id=5407025283456835913>🕶</emoji> <b>Fehler bei der Installation der Abhängigkeiten</b>\n<b>Dies tritt häufig auf, weil Termux viele Bibliotheken nicht unterstützt. Melden Sie dies nicht als Fehler, es kann nicht behoben werden.</b>"
+  requirements_restarted: "🚀 <b>Dein Userbot wird neu gestartet, nach dem Neustart installiere das Modul erneut.</b>"
   requirements_installing: "<emoji document_id=5328311576736833844>🚀</emoji> <b>Installiere Abhängigkeiten:\n\n{}</b>"
   requirements_restart: "<emoji document_id=5875145601682771643>🚀</emoji> <b>Abhängigkeiten installiert, aber ein Neustart ist erforderlich, um sie anzuwenden</b> <code>{}</code>"
   all_modules_deleted: "<emoji document_id=5784993237412351403>✅</emoji> <b>Module wurden gelöscht</b>"
@@ -568,7 +573,7 @@ translate:
   _cmd_doc_tr: "[Sprache] [Text] - Übersetzt den Text"
 
 quickstart:
-  base: "🪐 <b>Hallo.</b> Ihr <b>Heroku</b>-Userbot ist jetzt installiert.\n\n❓ <b>Benötigen Sie Hilfe?</b> Nehmen Sie an <a href=\"https://t.me/heroku_talks\">unserem Support-Chat</a> teil. Wir helfen <b>jedem</b>.\n\n💁‍♀️ <b>Kurzanleitung:</b>\n\n1️⃣ <b>Schreiben Sie</b> <code>.help</code>, <b>um die Liste der Module anzuzeigen</b>\n2️⃣ <b>Schreiben Sie</b> <code>.help &lt;Modulname/Befehl&gt;</code>, <b>um die Beschreibung des Moduls anzuzeigen</b>\n3️⃣ <b>Schreiben Sie</b> <code>.dlmod &lt;link&gt;</code> <b>um ein Modul von einem Link zu laden</b>\n4️⃣ <b>Schreiben</b> <code>.loadmod</code> <b>als Antwort auf eine Datei, um ein Modul daraus zu laden</b>\n5️⃣ <b>Schreiben</b> <code>.unloadmod &lt;Modulname&lt;</code> <b>um ein Modul zu entladen</b>\n\n💡 <b>Heroku unterstützt Module von Heroku, Friendly-Telegram und GeekTG sowie seine eigenen.</b>\n"
+  base: "🪐 <b>Hallo.</b> Ihr <b>Heroku</b>-Userbot ist jetzt installiert.\n\n❓ <b>Benötigen Sie Hilfe?</b> Nehmen Sie an <a href=\"https://t.me/heroku_talks\">unserem Support-Chat</a> teil. Wir helfen <b>jedem</b>.\n\n💁‍♀️ <b>Kurzanleitung:</b>\n\n1️⃣ <b>Schreiben Sie</b> <code>.help</code>, <b>um die Liste der Module anzuzeigen</b>\n2️⃣ <b>Schreiben Sie</b> <code>.help &lt;Modulname/Befehl&gt;</code>, <b>um die Beschreibung des Moduls anzuzeigen</b>\n3️⃣ <b>Schreiben Sie</b> <code>.dlmod &lt;link&gt;</code> <b>um ein Modul von einem Link zu laden</b>\n4️⃣ <b>Schreiben</b> <code>.loadmod</code> <b>als Antwort auf eine Datei, um ein Modul daraus zu laden</b>\n5️⃣ <b>Schreiben</b> <code>.unloadmod &lt;Modulname&lt;</code> <b>um ein Modul zu entladen</b>\n\n💡 <b>Heroku unterstützt Module von Hikka, Friendly-Telegram und GeekTG sowie seine eigenen.</b>\n"
   railway: "🚂 <b>Dein Userbot ist auf Railway installiert</b>. Auf dieser Plattform erhältst du nur <b>500 kostenlose Stunden pro Monat</b>. Wenn das Limit erreicht ist, wird dein <b>Userbot eingefroren</b>. Im nächsten Monat <b>musst du zu https://railway.app gehen und ihn neu starten</b>."
   lavhost: "✌️ <b>Dein Userbot ist auf lavHost installiert</b>. Trete @lavhost bei, um wichtige Benachrichtigungen und Updates zu erhalten. Alle Fragen zur Plattform sollten in @lavhostchat gestellt werden."
   language_saved: "🇩🇪 Sprache gespeichert!"
