--- a/heroku/langpacks/en.yml
+++ b/heroku/langpacks/en.yml
@@ -204,7 +204,9 @@ heroku_web:
 heroku_backup:
   period: "⌚️ <b>The unit «ALPHA»</b> creates regular backups. These settings can be changed later.\n\nPlease select the backup frequency\n\n<b>🚫 It is thus impossible to restore modules downloaded from files with the .lm command! Be careful and do .backupmods before restoring.</b>"
   saved: "✅ The periodicity is saved! It can be changed with <code>{prefix}set_backup_period</code>"
+  saved_bot: "✅ The periodicity is saved! It can be changed with {prefix}set_backup_period"
   never: "✅ I will not make automatic backups. Can be cancelled using <code>{prefix}set_backup_period</code>"
+  never_bot: "✅ I will not make automatic backups. Can be cancelled using {prefix}set_backup_period"
   invalid_args: "🚫 <b>Please specify the correct frequency in hours, or `0` to disable</b>"
   backup_caption: '<emoji document_id=5469718869536940860>👆</emoji> <b>This is your database backup. Do not share it with anyone, it contains personal information. If you need to restore it, use</b> <pre><code class="language-heroku">{prefix}restoredb</code></pre> <b>in response to this file.</b>'
   backupall_info: '<emoji document_id=5469718869536940860>👆</emoji> <b>This is your backup of the database and modules. Do not give it to anyone, it contains personal information. If you need to restore it, use</b> <pre><code class="language-heroku">{prefix}restoreall</code></pre> <b>in response to this file.</b>'
@@ -349,6 +351,9 @@ inline_stuff:
   bot_username_occupied: "<emoji document_id=5210952531676504517>🚫</emoji> <b>This username is already occupied</b>"
   bot_updated: "<emoji document_id=6318792204118656433>🎉</emoji> <b>Config successfully saved. Restart userbot to apply changes</b>"
   this_is_heroku: "🪐 <b>Hi! This is Heroku — powerful modular Telegram userbot. You can install it to your account!</b>\n\n<b>🌍 <a href=\"https://github.com/coddrago/Heroku\">GitHub</a></b>\n<b>👥 <a href=\"https://t.me/heroku_talks\">Support chat</a></b>"
+  profile_cmd: "ℹ️ Userbot Main Information\n\n<blockquote>• Prefix: {prefix}\n• RAM Usage: {ram_usage} MB\n• CPU Usage: {cpu_usage}%\n• Hosting: {host}</blockquote>"
+  restart: "🔄 Your Heroku is being restarted.."
+  prefix_reset: "🔀 Prefix reset!"
   _cmd_doc_ch_heroku_bot: "<username> - Change your Heroku inline bot username"
   _cls_doc: "Provides support for inline stuff"
 
@@ -359,7 +364,7 @@ test:
   configping: "Your custom text. You can use placeholders: {ping} - That's your ping. {uptime} - It's your uptime. {ping_hint} - This is the same hint as in the heroku module, it is chosen with random chance, also you can specify this hint in the config. You can use the {hostname} placeholder if you need the hostname of your server"
   hint: "Set a hint"
   ping_emoji: "Emoji that appears when ping does not increase significantly"
-  banner_url: "Image for your ping, for example: https://imgur.com/a/dsh7Fvb.png"
+  banner_url: "Image for your ping, for example: https://raw.githubusercontent.com/coddrago/assets/refs/heads/main/heroku/ping_cmd.png"
   logs_caption: "<emoji document_id=5350594756126721186>🪐</emoji> <b>Heroku logs with verbosity</b> <code>{}</code>\n\n<emoji document_id=5228879218363872764>⚪️</emoji> <b>Version: {}.{}.{}</b>{}"
   suspend_invalid_time: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Invalid time to suspend</b>"
   suspended: "<emoji document_id=5452023368054216810>🥶</emoji> <b>Bot  suspended for {}</b>"
@@ -512,7 +517,7 @@ loader:
   unloaded: "{} <b>Module {} unloaded.</b>"
   not_unloaded: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Module not unloaded.</b>"
   requirements_failed: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Requirements installation failed</b>"
-  requirements_failed_termux: "<emoji document_id=5407025283456835913>🕶</emoji> <b>Requirements installation failed</b>\n<b>The most common reason is that Termux doesn't support many libraries. Don't report it as bug, this can't be solved.</b>"
+  requirements_restarted: "🚀 <b>Your userbot is restarted, after restart, install the module again.</b>"
   requirements_installing: "<emoji document_id=5328311576736833844>🚀</emoji> <b>Installing requirements:\n\n{}</b>"
   requirements_restart: "<emoji document_id=5875145601682771643>🚀</emoji> <b>Requirements installed, but a restart is required for</b> <code>{}</code> <b>to apply</b>"
   all_modules_deleted: "<emoji document_id=5784993237412351403>✅</emoji> <b>All modules deleted</b>"
@@ -606,7 +611,7 @@ translate:
 
 quickstart:
   name: "Quickstart"
-  base: "🪐 <b>Hello.</b> Your <b>Heroku</b> userbot is now installed.\n\n❓ <b>Need help?</b> Join <a href=\"https://t.me/heroku_talks\">our support chat</a>. We help <b>everyone</b>.\n\n💁‍♀️ <b>Quick Guide:</b>\n\n1️⃣ <b>Write</b> <code>.help</code> <b>to see the list of modules</b>\n2️⃣ <b>Write</b> <code>.help &lt;Module name/command&gt;</code> <b>to see the description of the module</b>\n3️⃣ <b>Write</b> <code>.dlmod &lt;link&gt;</code> <b>to load a module from a link</b>\n4️⃣ <b>Write</b> <code>.loadmod</code> <b>in response to a file to load a module from it</b>\n5️⃣ <b>Write</b> <code>.unloadmod &lt;Module name&gt;</code> <b>to unload a module</b>\n\n💡 <b>Heroku supports modules from Heroku, Friendly-Telegram, and GeekTG, as well as its own.</b>\n"
+  base: "🪐 <b>Hello.</b> Your <b>Heroku</b> userbot is now installed.\n\n❓ <b>Need help?</b> Join <a href=\"https://t.me/heroku_talks\">our support chat</a>. We help <b>everyone</b>.\n\n💁‍♀️ <b>Quick Guide:</b>\n\n1️⃣ <b>Write</b> <code>.help</code> <b>to see the list of modules</b>\n2️⃣ <b>Write</b> <code>.help &lt;Module name/command&gt;</code> <b>to see the description of the module</b>\n3️⃣ <b>Write</b> <code>.dlmod &lt;link&gt;</code> <b>to load a module from a link</b>\n4️⃣ <b>Write</b> <code>.loadmod</code> <b>in response to a file to load a module from it</b>\n5️⃣ <b>Write</b> <code>.unloadmod &lt;Module name&gt;</code> <b>to unload a module</b>\n\n💡 <b>Heroku supports modules from Hikka, Friendly-Telegram, and GeekTG, as well as its own.</b>\n"
   lavhost: "✌️ <b>Your userbot is installed on lavHost</b>. Make sure to join @lavhost for important notifications and updates. All questions regarding the platform should be asked in @lavhostchat."
   language_saved: "🇬🇧 Language saved!"
   language: "🇬🇧 English"
