--- a/heroku/langpacks/ua.yml
+++ b/heroku/langpacks/ua.yml
@@ -189,8 +189,10 @@ heroku_web:
 
 heroku_backup:
   period: "⌚️ <b>Пристрій «ALPHA»</b> створює регулярні резервні копії. Ці налаштування можна змінити пізніше.\n\nБудь ласка, виберіть частоту резервного копіювання\n\n<b>🚫 Таким чином неможливо відновити модулі, завантажені з файлів за допомогою команди .lm! Будьте обережні та виконайте .backupmods перед відновленням.</b>"
-  saved: "✅ Періодичність збережено! Її можна змінити за допомогою <code>{prefix}set_backup_period</code>"
+  saved: "✅ Періодичність збережено! Її можна змінити за допомогою <code>{prefix}set_backup_period</code>"  
+  saved_bot: "✅ Періодичність збережено! Її можна змінити за допомогою {prefix}set_backup_period"
   never: "✅ Я не робитиму автоматичне резервне копіювання. Можна скасувати за допомогою <code>{prefix}set_backup_period</code>"
+  never_bot: "✅ Я не робитиму автоматичне резервне копіювання. Можна скасувати за допомогою {prefix}set_backup_period"
   invalid_args: "🚫 <b>Будь ласка, вкажіть правильну частоту в годинах або 0 для вимкнення</b>"
   backup_caption: '<emoji document_id=5469718869536940860>👆</emoji> <b>Це резервна копія вашої бази даних. Не повідомляйте його нікому, він містить особисту інформацію. Якщо вам потрібно його відновити, використовуйте</b> <pre><code class="language-heroku">{prefix}restoredb</code></pre> <b>у відповідь на цей файл.</b>'
   backupall_info: '<emoji document_id=5469718869536940860>👆</emoji> <b>Це ваша резервна копія бази даних і модулів. Не давайте його нікому, він містить особисту інформацію. Якщо вам потрібно його відновити, використовуйте</b> <pre><code class="language-heroku">{prefix}restoreall</code></pre> <b>у відповідь на цей файл.</b>'
@@ -324,6 +326,9 @@ inline_stuff:
   bot_username_occupied: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Такий нік бота вже зайнятий</b>"
   bot_updated: "<emoji document_id=6318792204118656433>🎉</emoji> <b>Налаштування збережені. Для їх застосування треба перезавантажити юзербота</b>"
   this_is_heroku: "🪐 <b>Привіт! Це Heroku — потужний модульний Telegram юзербот. Ви можете встановити його на свій акаунт!</b>\n\n<b>🌍 <a href=\"https://github.com/coddrago/Heroku\">GitHub</a></b>\n<b>👥 <a href=\"https://t.me/heroku_talks\">Чат підтримки</a></b>"
+  profile_cmd: "ℹ️ Основна інформація про юзерботу\n\n<blockquote>• Префікс: {prefix}\n• Використання RAM: {ram_usage} МБ\n• Використання CPU: {cpu_usage}%\n• Хостинг: {host}</blockquote>"
+  restart: "🔄 Ваша Heroku перезапускається..."
+  prefix_reset: "🔀 Префікс скинутий!"
   _cmd_doc_ch_heroku_bot: "<юзернейм> - Змінити юзернейм інлайн бота"
 
 test:
@@ -332,7 +337,7 @@ test:
   configping: "Ваш текст. Ви можете використовувати заміщення: {ping} - Це ваш пінг, {uptime} - Це ваш час роботи. {ping_hint} - Це той самий підказка, що й у модулі heroku, вона вибирається випадково, також ви можете вказати цю підказку у конфігурації. Ви можте використовувати плейсхолдер {hostname} якщо вам потрібен hostname вашого сервера"
   hint: "Встановіть підказку"
   ping_emoji: "Емоджі, який з'являється, коли пінг не збільшується суттєво"
-  banner_url: "Картинка для вашого пінгу, наприклад: https://imgur.com/a/dsh7Fvb.png"
+  banner_url: "Картинка для вашого пінгу, наприклад: https://raw.githubusercontent.com/coddrago/assets/refs/heads/main/heroku/ping_cmd.png"
   logs_caption: "<emoji document_id=5350594756126721186>🪐</emoji> <b>Логи Heroku рівня</b> <code>{}</code>\n\n<emoji document_id=5228879218363872764>⚪️</emoji> <b>Версія: {}.{}.{}</b>{}"
   debugging_enabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Режим розробника увімкнено для модуля</b> <code>{0}</code>\n<i>Прямуй до директорії `debug_modules`, змінюй файл `{0}.py`, и смотри изменения в режиме реального времени</i>"
   debugging_disabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Режим розробника вімкнено</b>"
@@ -480,7 +485,7 @@ loader:
   unloaded: "{} <b>Модуль {} вивантажено.</b>"
   not_unloaded: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Модуль не вивантажено.</b>"
   requirements_failed: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Помилка встановлення залежностей</b>"
-  requirements_failed_termux: "<emoji document_id=5407025283456835913>🕶</emoji> <b>Помилка встановлення залежностей</b>\n<b>Найчастіше виникає через те, що Termux не підтримує багато бібліотек. Не повідомляйте про це як про помилку, це не може бути виправлено.</b>"
+  requirements_restarted: "🚀 <b>Ваш юзербот перезапущено, після перезапуску встановіть модуль знову.</b>"
   requirements_installing: "<emoji document_id=5328311576736833844>🚀</emoji> <b>Встановлюю залежності:\n\n{}</b>"
   requirements_restart: "<emoji document_id=5875145601682771643>🚀</emoji> <b>Залежності встановлено, але потрібне перезавантаження для застосування</b> <code>{}</code>"
   all_modules_deleted: "<emoji document_id=5784993237412351403>✅</emoji> <b>Модулі видалено</b>"
@@ -569,7 +574,7 @@ translate:
   _cmd_doc_tr: "[мова] [текст] - Перекласти текст"
 
 quickstart:
-  base: "🪐 <b>Привет.</b> Твой юзербот <b>Heroku</b> установлен.\n\n❓ <b>Нужна помощь?</b> Вступай <a href=\"https://t.me/heroku_talks\">в наш чат поддержки</a>. Мы помогаем <b>всем</b>.\n\n💁‍♀️ <b>Быстрый гайд:</b>\n\n1️⃣ <b>Напиши</b> <code>.help</code> <b>чтобы увидеть список модулей</b>\n2️⃣ <b>Напиши</b> <code>.help &lt;Название модуля/команда&gt;</code> <b>чтобы увидеть описание модуля</b>\n3️⃣ <b>Напиши</b> <code>.dlmod &lt;посилання&gt;</code> <b>щоб завантажити модуль із посилання</b>\n4️⃣ <b>Напиши</b> <code>.loadmod</code> <b>відповіддю на файл, щоб завантажити модуль з нього</b>\n5️⃣ <b>Напиши</b> <code>.unloadmod &lt;Назва модуля&gt; </code> <b>, щоб вивантажити модуль</b> \n\n💡 <b>Heroku підтримує модулі з Heroku, Friendly-Telegram та GeekTG, а також свої власні.</b>\n"
+  base: "🪐 <b>Привет.</b> Твой юзербот <b>Heroku</b> установлен.\n\n❓ <b>Нужна помощь?</b> Вступай <a href=\"https://t.me/heroku_talks\">в наш чат поддержки</a>. Мы помогаем <b>всем</b>.\n\n💁‍♀️ <b>Быстрый гайд:</b>\n\n1️⃣ <b>Напиши</b> <code>.help</code> <b>чтобы увидеть список модулей</b>\n2️⃣ <b>Напиши</b> <code>.help &lt;Название модуля/команда&gt;</code> <b>чтобы увидеть описание модуля</b>\n3️⃣ <b>Напиши</b> <code>.dlmod &lt;посилання&gt;</code> <b>щоб завантажити модуль із посилання</b>\n4️⃣ <b>Напиши</b> <code>.loadmod</code> <b>відповіддю на файл, щоб завантажити модуль з нього</b>\n5️⃣ <b>Напиши</b> <code>.unloadmod &lt;Назва модуля&gt; </code> <b>, щоб вивантажити модуль</b> \n\n💡 <b>Heroku підтримує модулі з Hikka, Friendly-Telegram та GeekTG, а також свої власні.</b>\n"
   railway: "🚂 <b>Ти встановив юзербота на Railway, вітаю!</b>. На цій платформі ти отримуєш лише <b>500 безкоштовних годин на місяць</b>. Коли ліміт буде досягнуто, твій <b>юзербот буде заморожено</b>. Наступного місяця <b>ти повинен будеш перейти на https://railway.app і перезапустити його</b>."
   lavhost: "✌️ <b>Ти встановив юзербота на LavHost, вітаю!</b>. Усі новини про хост - @lavhost. Усі питання про хост - @lavhostchat"
   language_saved: "🇺🇦 Мова збережена!"
