--- a/heroku/langpacks/ru.yml
+++ b/heroku/langpacks/ru.yml
@@ -190,7 +190,9 @@ heroku_web:
 heroku_backup:
   period: "⌚️ <b>Юнит «ALPHA»</b> создает регулярные резервные копии. Эти настройки можно изменить позже.\n\nПожалуйста, выберите периодичность резервного копирования\n\n<b>🚫 Таким образом невозможно восстановить модули скачанные с файлов командой .lm! Будьте осторожны и делайте .backupmods перед восстановлением.</b>"
   saved: "✅ Периодичность сохранена! Ее можно изменить с помощью <code>{prefix}set_backup_period</code>"
+  saved_bot: "✅ Периодичность сохранена! Ее можно изменить с помощью {prefix}set_backup_period"
   never: "✅ Я не буду делать автоматические резервные копии. Можно отменить используя <code>{prefix}set_backup_period</code>"
+  never_bot: "✅ Я не буду делать автоматические резервные копии. Можно отменить используя {prefix}set_backup_period"
   invalid_args: "🚫 <b>Укажи правильную периодичность в часах, или `0` для отключения</b>"
   backup_caption: '<emoji document_id=5469718869536940860>👆</emoji> <b>Это твоя резервная копия базы данных. Не передавай ее никому, она содержит личную информацию. Если тебе нужно ее восстановить, используй</b> <pre><code class="language-heroku">{prefix}restoredb</code></pre> <b>в ответ на этот файл.</b>'
   backupall_info: '<emoji document_id=5469718869536940860>👆</emoji> <b>Это твоя резервная копия базы и модулей. Не передавай ее никому, она содержит личную информацию. Если тебе нужно ее восстановить, используй</b> <pre><code class="language-heroku">{prefix}restoreall</code></pre> <b>в ответ на этот файл.</b>'
@@ -324,6 +326,9 @@ inline_stuff:
   bot_username_occupied: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Такой ник бота уже занят</b>"
   bot_updated: "<emoji document_id=6318792204118656433>🎉</emoji> <b>Настройки сохранены. Для их применения нужно перезагрузить юзербот</b>"
   this_is_heroku: "🪐 <b>Привет! Это Heroku — мощный модульный Telegram юзербот. Вы можете установить его на свой аккаунт!</b>\n\n<b>🌍 <a href=\"https://github.com/coddrago/Heroku\">GitHub</a></b>\n<b>👥 <a href=\"https://t.me/heroku_talks\">Чат поддержки</a></b>"
+  profile_cmd: "ℹ️ Основная информация об юзерботе\n\n<blockquote>• Префикс: {prefix}\n• Использование RAM: {ram_usage} МБ\n• Использование CPU: {cpu_usage}%\n• Хостинг: {host}</blockquote>"
+  restart: "🔄 Ваша Heroku перезапускается..."
+  prefix_reset: "🔀 Префикс сброшен!"
   _cmd_doc_ch_heroku_bot: "<юзернейм> - Изменить юзернейм инлайн бота"
 
 test:
@@ -332,7 +337,7 @@ test:
   configping: "Ваш кастомный текст. Вы можете использовать плейсхолдеры: {ping} - Это ваш пинг, {uptime} - Это ваш аптайм, {ping_hint} - подсказка. Вы можете использовать плейсхолдер {hostname} если вам нужен hostname вашего сервера"
   hint: "Укажите подсказку"
   ping_emoji: "Эмодзи которое появляется при не значительном росте пинга."
-  banner_url: "Картинка для вашего пинга, для примера: https://imgur.com/a/dsh7Fvb.png"
+  banner_url: "Картинка для вашего пинга, для примера: https://raw.githubusercontent.com/coddrago/assets/refs/heads/main/heroku/ping_cmd.png"
   logs_caption: "<emoji document_id=5350594756126721186>🪐</emoji> <b>Логи Heroku уровня</b> <code>{}</code>\n\n<emoji document_id=5228879218363872764>⚪️</emoji> <b>Версия: {}.{}.{}</b>{}"
   debugging_enabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Режим разработчика включен для модуля</b> <code>{0}</code>\n<i>Отправляйся в директорию `debug_modules`, изменяй файл `{0}.py`, и смотри изменения в режиме реального времени</i>"
   debugging_disabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Режим разработчика выключен</b>"
@@ -473,7 +478,7 @@ loader:
   unloaded: "{} <b>Модуль {} выгружен.</b>"
   not_unloaded: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Модуль не выгружен.</b>"
   requirements_failed: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Ошибка установки зависимостей</b>"
-  requirements_failed_termux: "<emoji document_id=5407025283456835913>🕶</emoji> <b>Ошибка установки зависимостей</b>\n<b>Наиболее часто возникает из-за того, что Termux не поддерживает многие библиотеки. Не сообщайте об этом как об ошибке, это не может быть исправлено.</b>"
+  requirements_restarted: "🚀 <b>Ваш юзербот перезагружается, после перезагрузки выполните установку модуля еще раз.</b>"
   requirements_installing: "<emoji document_id=5328311576736833844>🚀</emoji> <b>Устанавливаю зависимости:\n\n{}</b>"
   requirements_restart: "<emoji document_id=5875145601682771643>🚀</emoji> <b>Зависимости установлены, но нужна перезагрузка для применения</b> <code>{}</code>"
   all_modules_deleted: "<emoji document_id=5784993237412351403>✅</emoji> <b>Модули удалены</b>"
@@ -562,8 +567,7 @@ translate:
   _cmd_doc_tr: "[язык] [текст] - Перевести текст"
 
 quickstart:
-  base: "🪐 <b>Привет.</b> Твой юзербот <b>Heroku</b> установлен.\n\n❓ <b>Нужна помощь?</b> Вступай <a href=\"https://t.me/heroku_talks\">в наш чат поддержки</a>. Мы помогаем <b>всем</b>.\n\n💁‍♀️ <b>Быстрый гайд:</b>\n\n1️⃣ <b>Напиши</b> <code>.help</code> <b>чтобы увидеть список модулей</b>\n2️⃣ <b>Напиши</b> <code>.help &lt;Название модуля/команда&gt;</code> <b>чтобы увидеть описание модуля</b>\n3️⃣ <b>Напиши</b> <code>.dlmod &lt;ссылка&gt;</code> <b>чтобы загрузить модуль из ссылки</b>\n4️⃣ <b>Напиши</b> <code>.loadmod</code> <b>ответом на файл, чтобы загрузить модуль из него</b>\n5️⃣ <b>Напиши</b> <code>.unloadmod &lt;Название модуля&gt;</code> <b>чтобы выгрузить модуль</b>\n\n💡 <b>Heroku поддерживает модули из Heroku, Friendly-Telegram и GeekTG, а также свои собственные.</b>\n"
-  railway: "🚂 <b>Твой юзербот установлен на Railway</b>. На этой платформе ты получаешь только <b>500 бесплатных часов в месяц</b>. Когда лимит будет достигнет, твой <b>юзербот будет заморожен</b>. В следующем месяце <b>ты должен будешь перейти на https://railway.app и перезапустить его</b>."
+  base: "🪐 <b>Привет.</b> Твой юзербот <b>Heroku</b> установлен.\n\n❓ <b>Нужна помощь?</b> Вступай <a href=\"https://t.me/heroku_talks\">в наш чат поддержки</a>. Мы помогаем <b>всем</b>.\n\n💁‍♀️ <b>Быстрый гайд:</b>\n\n1️⃣ <b>Напиши</b> <code>.help</code> <b>чтобы увидеть список модулей</b>\n2️⃣ <b>Напиши</b> <code>.help &lt;Название модуля/команда&gt;</code> <b>чтобы увидеть описание модуля</b>\n3️⃣ <b>Напиши</b> <code>.dlmod &lt;ссылка&gt;</code> <b>чтобы загрузить модуль из ссылки</b>\n4️⃣ <b>Напиши</b> <code>.loadmod</code> <b>ответом на файл, чтобы загрузить модуль из него</b>\n5️⃣ <b>Напиши</b> <code>.unloadmod &lt;Название модуля&gt;</code> <b>чтобы выгрузить модуль</b>\n\n💡 <b>Heroku поддерживает модули из Hikka, Friendly-Telegram и GeekTG, а также свои собственные.</b>\n"
   lavhost: "✌️ <b>Твой юзербот установлен на lavHost</b>. Вступи в @lavhost, чтобы получать важные уведомления и обновления. Все вопросы, связанные с платформой, следует задавать в @lavhostchat."
   language_saved: "🇷🇺 Язык сохранен!"
   language: "🇷🇺 Русский"
